Move kernel messages to \__kernel_msg_...
These are all 'kernel-reserved' and have to be cross-module. Thus the
only questions are:

- Which team modules should use 'non-maskable' messages
- Does sub-division make sense

(The latter depends on the former: if we are restrictive in which
modules can give kernel errors then we are less in need of subdivision
...)

--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -617,7 +617,7 @@
 \cs_new_protected:Npn \@@_if_flag_error:nnx #1
   {
     \flag_if_raised:nTF {#1}
-      { \__msg_kernel_error:nnx { str } }
+      { \__kernel_msg_error:nnx { str } }
       { \use_none:nn }
   }
 \cs_new_protected:Npn \@@_if_flag_no_error:nnx #1#2#3
@@ -761,7 +761,7 @@
   {
     \if_meaning:w #1 #5
       \tl_if_empty:nF {#3}
-        { \__msg_kernel_error:nnx { str } { native-escaping } {#3} }
+        { \__kernel_msg_error:nnx { str } { native-escaping } {#3} }
       #1
     \else:
       #4 #2 #1
@@ -833,7 +833,7 @@
               }
               {
                 \tl_clear:N \l_@@_internal_tl
-                \__msg_kernel_error:nnxx { str } { unknown-#2 } {#4} {#1}
+                \__kernel_msg_error:nnxx { str } { unknown-#2 } {#4} {#1}
               }
           }
         \cs_if_exist:cF { @@_convert_#3_#1: }
@@ -1073,7 +1073,7 @@
             \@@_output_byte:n {#1}
           \fi:
         }
-      \__msg_kernel_new:nnnn { str } { pdfTeX-native-overflow }
+      \__kernel_msg_new:nnnn { str } { pdfTeX-native-overflow }
         { Character~code~too~large~for~pdfTeX. }
         {
           The~pdfTeX~engine~only~supports~8-bit~characters:~
@@ -1303,18 +1303,18 @@
 % General messages, and messages for the encodings and escapings loaded
 % by default (\enquote{native}, and \enquote{bytes}).
 %    \begin{macrocode}
-\__msg_kernel_new:nnn { str } { unknown-esc }
+\__kernel_msg_new:nnn { str } { unknown-esc }
   { Escaping~scheme~'#1'~(filtered:~'#2')~unknown. }
-\__msg_kernel_new:nnn { str } { unknown-enc }
+\__kernel_msg_new:nnn { str } { unknown-enc }
   { Encoding~scheme~'#1'~(filtered:~'#2')~unknown. }
-\__msg_kernel_new:nnnn { str } { native-escaping }
+\__kernel_msg_new:nnnn { str } { native-escaping }
   { The~'native'~encoding~scheme~does~not~support~any~escaping. }
   {
     Since~native~strings~do~not~consist~in~bytes,~
     none~of~the~escaping~methods~make~sense.~
     The~specified~escaping,~'#1',~will be ignored.
   }
-\__msg_kernel_new:nnn { str } { file-not-found }
+\__kernel_msg_new:nnn { str } { file-not-found }
   { File~'l3str-#1.def'~not~found. }
 %    \end{macrocode}
 %
@@ -1330,7 +1330,7 @@
     \sys_if_engine_xetex_p:
   }
   {
-    \__msg_kernel_new:nnnn { str } { non-byte }
+    \__kernel_msg_new:nnnn { str } { non-byte }
       { String~invalid~in~escaping~'#1':~it~may~only~contain~bytes. }
       {
         Some~characters~in~the~string~you~asked~to~convert~are~not~
@@ -1348,13 +1348,13 @@
 %
 % Those messages are used when converting to and from 8-bit encodings.
 %    \begin{macrocode}
-\__msg_kernel_new:nnnn { str } { decode-8-bit }
+\__kernel_msg_new:nnnn { str } { decode-8-bit }
   { Invalid~string~in~encoding~'#1'. }
   {
     LaTeX~came~across~a~byte~which~is~not~defined~to~represent~
     any~character~in~the~encoding~'#1'.
   }
-\__msg_kernel_new:nnnn { str } { encode-8-bit }
+\__kernel_msg_new:nnnn { str } { encode-8-bit }
   { Unicode~string~cannot~be~converted~to~encoding~'#1'. }
   {
     The~encoding~'#1'~only~contains~a~subset~of~all~Unicode~characters.~
@@ -1435,7 +1435,7 @@
         \@@_unescape_hex_auxii:N
       }
   }
-\__msg_kernel_new:nnnn { str } { unescape-hex }
+\__kernel_msg_new:nnnn { str } { unescape-hex }
   { String~invalid~in~escaping~'hex':~only~hexadecimal~digits~allowed. }
   {
     Some~characters~in~the~string~you~asked~to~convert~are~not~
@@ -1512,7 +1512,7 @@
         \@@_output_end:
         \use_i:nnn #3 ##2##3
       }
-    \__msg_kernel_new:nnnn { str } { unescape-#2 }
+    \__kernel_msg_new:nnnn { str } { unescape-#2 }
       { String~invalid~in~escaping~'#2'. }
       {
         LaTeX~came~across~the~escape~character~'#1'~not~followed~by~
@@ -1641,7 +1641,7 @@
       \if_charcode:w ^^J #2 \else: ^^J \fi:
       \@@_unescape_string_newlines:wN #2
     }
-  \__msg_kernel_new:nnnn { str } { unescape-string }
+  \__kernel_msg_new:nnnn { str } { unescape-string }
     { String~invalid~in~escaping~'string'. }
     {
       LaTeX~came~across~an~escape~character~'\c_backslash_str'~
@@ -1920,7 +1920,7 @@
 \flag_clear_new:n { str_extra }
 \flag_clear_new:n { str_overlong }
 \flag_clear_new:n { str_overflow }
-\__msg_kernel_new:nnnn { str } { utf8-decode }
+\__kernel_msg_new:nnnn { str } { utf8-decode }
   {
     Invalid~UTF-8~string: \exp_last_unbraced:Nf \use_none:n
     \@@_if_flag_times:nT { str_missing }  { ,~missing~continuation~byte }
@@ -2237,14 +2237,14 @@
   \flag_clear_new:n { str_missing }
   \flag_clear_new:n { str_extra }
   \flag_clear_new:n { str_end }
-  \__msg_kernel_new:nnnn { str } { utf16-encode }
+  \__kernel_msg_new:nnnn { str } { utf16-encode }
     { Unicode~string~cannot~be~expressed~in~UTF-16:~surrogate. }
     {
       Surrogate~code~points~(in~the~range~[U+D800,~U+DFFF])~
       can~be~expressed~in~the~UTF-8~and~UTF-32~encodings,~
       but~not~in~the~UTF-16~encoding.
     }
-  \__msg_kernel_new:nnnn { str } { utf16-decode }
+  \__kernel_msg_new:nnnn { str } { utf16-decode }
     {
       Invalid~UTF-16~string: \exp_last_unbraced:Nf \use_none:n
       \@@_if_flag_times:nT { str_missing }  { ,~missing~trail~surrogate }
@@ -2536,7 +2536,7 @@
 %    \begin{macrocode}
   \flag_clear_new:n { str_overflow }
   \flag_clear_new:n { str_end }
-  \__msg_kernel_new:nnnn { str } { utf32-decode }
+  \__kernel_msg_new:nnnn { str } { utf32-decode }
     {
       Invalid~UTF-32~string: \exp_last_unbraced:Nf \use_none:n
       \@@_if_flag_times:nT { str_overflow } { ,~code~point~too~large }
