--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1297,7 +1297,7 @@
 %   foo}). The checks on driver choice are set up here, so when actually
 %   the driver it's a straight forward operation.
 %    \begin{macrocode}
-\__msg_kernel_new:nnnn { expl } { wrong-driver }
+\__kernel_msg_new:nnnn { expl } { wrong-driver }
   { Driver~request~inconsistent~with~engine:~using~'#2'~driver. }
   {
     You~have~requested~driver~'#1',~but~this~is~not~suitable~for~use~with~the~
@@ -1331,14 +1331,14 @@
         \tl_set:Nn \l__expl_driver_tl { dvipdfmx }
         \sys_if_engine_xetex:TF
           {
-            \__msg_kernel_error:nnnn { expl } { wrong-driver }
+            \__kernel_msg_error:nnnn { expl } { wrong-driver }
               { dvipdfmx } { xdvipdfmx }
             \tl_set:Nn \l__expl_driver_tl { xdvipdfmx }
           }
           {
             \sys_if_output_pdf:T
               {
-                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                \__kernel_msg_error:nnnn { expl } { wrong-driver }
                   { dvipdfmx } { pdfmode }
                 \tl_set:Nn \l__expl_driver_tl { pdfmode }
               }
@@ -1349,14 +1349,14 @@
         \tl_set:Nn \l__expl_driver_tl { dvips }
         \sys_if_engine_xetex:TF
           {
-            \__msg_kernel_error:nnnn { expl } { wrong-driver }
+            \__kernel_msg_error:nnnn { expl } { wrong-driver }
               { dvips } { xdvipdfmx }
             \tl_set:Nn \l__expl_driver_tl { xdvipdfmx }
           }
           {
             \sys_if_output_pdf:T
               {
-                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                \__kernel_msg_error:nnnn { expl } { wrong-driver }
                   { dvips } { pdfmode }
                 \tl_set:Nn \l__expl_driver_tl { pdfmode }
               }
@@ -1367,14 +1367,14 @@
         \tl_set:Nn \l__expl_driver_tl { dvisvgm }
         \sys_if_engine_xetex:TF
           {
-            \__msg_kernel_error:nnnn { expl } { wrong-driver }
+            \__kernel_msg_error:nnnn { expl } { wrong-driver }
               { dvips } { xdvipdfmx }
             \tl_set:Nn \l__expl_driver_tl { xdvipdfmx }
           }
           {
             \sys_if_output_pdf:T
               {
-                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                \__kernel_msg_error:nnnn { expl } { wrong-driver }
                   { dvips } { pdfmode }
                 \tl_set:Nn \l__expl_driver_tl { pdfmode }
               }
@@ -1387,14 +1387,14 @@
         \tl_set:Nn \l__expl_driver_tl { pdfmode }
         \sys_if_engine_xetex:TF
           {
-            \__msg_kernel_error:nnnn { expl } { wrong-driver }
+            \__kernel_msg_error:nnnn { expl } { wrong-driver }
               { pdfmode } { xdvipdfmx }
             \tl_set:Nn \l__expl_driver_tl { xdvipdfmx }
           }
           {
             \sys_if_output_pdf:F
               {
-                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                \__kernel_msg_error:nnnn { expl } { wrong-driver }
                   { pdfmode } { dvips }
                 \tl_set:Nn \l__expl_driver_tl { dvips }
               }
@@ -1407,12 +1407,12 @@
           {
             \sys_if_output_pdf:TF
               {
-                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                \__kernel_msg_error:nnnn { expl } { wrong-driver }
                   { xdvipdfmx } { pdfmode }
                 \tl_set:Nn \l__expl_driver_tl { pdfmode }
               }
               {
-                \__msg_kernel_error:nnnn { expl } { wrong-driver }
+                \__kernel_msg_error:nnnn { expl } { wrong-driver }
                   { xdvipdfmx } { dvips }
                 \tl_set:Nn \l__expl_driver_tl { dvips }
               }
@@ -1454,7 +1454,7 @@
 \str_if_eq:VnTF \l__expl_driver_tl { latex2e }
   {
     \tl_gput_left:Nn \@begindocumenthook { \RequirePackage { graphics } }
-    \__msg_kernel_new:nnnn { box } { clipping-not-available }
+    \__kernel_msg_new:nnnn { box } { clipping-not-available }
       { Box~clipping~not~available. }
       {
         The~\box_clip:N~function~is~only~available~when~loading~expl3~
@@ -1463,7 +1463,7 @@
     \cs_set_protected:Npn \box_clip:N #1
       {
         \hbox_set:Nn #1 { \box_use:N #1 }
-        \__msg_kernel_error:nn { box } { clipping-not-available }
+        \__kernel_msg_error:nn { box } { clipping-not-available }
       }
     \cs_set_protected:Npn \box_rotate:Nn #1#2
       { \hbox_set:Nn #1 { \rotatebox {#2} { \box_use:N #1 } } }
