--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -75,10 +75,10 @@
   {
     \etex_protected:D \tex_outer:D \tex_edef:D #1
       {
-        \exp_not:N \__msg_kernel_expandable_error:nnnnn
+        \exp_not:N \__kernel_msg_expandable_error:nnnnn
           { kernel } { deprecated-command }
           { \tl_to_str:n {#3} } { \token_to_str:N #1 } { \tl_to_str:n {#2} }
-        \exp_not:N \__msg_kernel_error:nnxxx
+        \exp_not:N \__kernel_msg_error:nnxxx
           { kernel } { deprecated-command }
           { \tl_to_str:n {#3} } { \token_to_str:N #1 } { \tl_to_str:n {#2} }
       }
@@ -125,12 +125,12 @@
     \tl_gput_right:Nn \g__debug_deprecation_on_tl
       {
         \cs_set_protected:Npn \__cs_generate_variant_loop_warning:nnxxxx
-          { \__msg_kernel_error:nnxxxx }
+          { \__kernel_msg_error:nnxxxx }
       }
     \tl_gput_right:Nn \g__debug_deprecation_off_tl
       {
         \cs_set_protected:Npn \__cs_generate_variant_loop_warning:nnxxxx
-          { \__msg_kernel_warning:nnxxxx }
+          { \__kernel_msg_warning:nnxxxx }
       }
   }
   { }
