--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1064,7 +1064,7 @@
   {
       \fi:
     \fi:
-    \__msg_kernel_expandable_error:nnn { kernel } { bad-variable } {#2}
+    \__kernel_msg_expandable_error:nnn { kernel } { bad-variable } {#2}
     \exp_end:
   }
 %    \end{macrocode}
@@ -1527,7 +1527,7 @@
 %    error.
 %    \begin{macrocode}
   \cs_new:Npn ^^@
-    { \__msg_kernel_expandable_error:nn { kernel } { bad-exp-end-f } }
+    { \__kernel_msg_expandable_error:nn { kernel } { bad-exp-end-f } }
 %    \end{macrocode}
 %   The same but grabbing an argument to remove spaces and braces.
 %    \begin{macrocode}
@@ -1642,7 +1642,7 @@
 \cs_new_protected:Npn \@@_generate_variant:nnNN #1#2#3#4
   {
     \if_meaning:w \c_false_bool #3
-      \__msg_kernel_error:nnx { kernel } { missing-colon }
+      \__kernel_msg_error:nnx { kernel } { missing-colon }
         { \token_to_str:c {#1} }
       \exp_after:wN \use_none_delimit_by_q_recursion_stop:w
     \fi:
@@ -1849,7 +1849,7 @@
     \exp_not:n
       {
         \q_mark
-        \__msg_kernel_error:nnxx { kernel } { variant-too-long }
+        \__kernel_msg_error:nnxx { kernel } { variant-too-long }
           {#5} { \token_to_str:N #3 }
         \use_none:nnn
         \q_stop
@@ -1864,7 +1864,7 @@
     \exp_not:n
       {
         \q_mark
-        \__msg_kernel_error:nnxxxx { kernel } { invalid-variant }
+        \__kernel_msg_error:nnxxxx { kernel } { invalid-variant }
           {#7} { \token_to_str:N #5 } {#1} {#2}
         \use_none:nnn
         \q_stop
@@ -1882,7 +1882,7 @@
       }
   }
 \cs_new_protected:Npn \@@_generate_variant_loop_warning:nnxxxx
-  { \__msg_kernel_warning:nnxxxx }
+  { \__kernel_msg_warning:nnxxxx }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2012,7 +2012,7 @@
 \cs_new_protected:Npn \@@_generate_variant:nnNnn #1#2#3#4#5
   {
     \if_meaning:w \c_false_bool #3
-      \__msg_kernel_error:nnx { kernel } { missing-colon }
+      \__kernel_msg_error:nnx { kernel } { missing-colon }
         { \token_to_str:c {#1} }
       \use_i_delimit_by_q_stop:nw
     \fi:
@@ -2032,7 +2032,7 @@
       \cs_if_exist_use:cTF { @@_generate_variant_#1_form:nnn }
         { {#3} {#4} {#5} }
         {
-          \__msg_kernel_error:nnxx
+          \__kernel_msg_error:nnxx
             { kernel } { conditional-form-unknown }
             {#1} { \token_to_str:c { #3 : #4 } }
         }
