--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -175,7 +175,7 @@
         \if_meaning:w #1 ^^b3 ^^bc \else: % ĳ - U+0133 - ij
         \if_meaning:w #1 ^^ba ^^a8 \else: % ĺ - U+013A - lacute
         \if_meaning:w #1 ^^be ^^a9 \else: % ľ - U+013E - lcaron
-          \__msg_kernel_expandable_error:nn { kernel } { encoding-failure }
+          \__kernel_msg_expandable_error:nn { kernel } { encoding-failure }
         \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi:
       }
     \cs_new:cpn { __char_active_C5:N } #1
@@ -197,7 +197,7 @@
         \if_meaning:w #1 ^^ba ^^b9 \else: % ź - U+017A - zacute
         \if_meaning:w #1 ^^bc ^^bb \else: % ż - U+017C - zdotaccent
         \if_meaning:w #1 ^^be ^^ba \else: % ž - U+017E - zcaron
-          \__msg_kernel_expandable_error:nn { kernel } { encoding-failure }
+          \__kernel_msg_expandable_error:nn { kernel } { encoding-failure }
         \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi:
         \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi:
       }
@@ -206,7 +206,7 @@
         \if_meaning:w #1 ^^99 ^^b3 \else: % ș - U+0219 - scommaaccent
         \if_meaning:w #1 ^^9b ^^b5 \else: % ț - U+021B - tcommaaccent
         \if_meaning:w #1 ^^b7 ^^1a \else: % ȷ - U+0237 - dotlessj
-          \__msg_kernel_expandable_error:nn { kernel } { encoding-failure }
+          \__kernel_msg_expandable_error:nn { kernel } { encoding-failure }
         \fi: \fi: \fi:
       }
 %    \end{macrocode}
@@ -221,7 +221,7 @@
         \seq_put_right:Nx \l_char_active_seq
           { \exp_not:c { \char_generate:nn { "#1 } { 12 } } }
       }
-    \__msg_kernel_new:nnn { kernel } { encoding-failure }
+    \__kernel_msg_new:nnn { kernel } { encoding-failure }
       { Unknown~UTF-8~char }
 %    \end{macrocode}
 % All of the chars are lower case so give them the correct \tn{lccode}
