--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -796,12 +796,12 @@
   }
 \cs_new:Npn \@@_exp_after_mark_f:nw #1
   {
-    \__msg_kernel_expandable_error:nn { kernel } { fp-early-end }
+    \__kernel_msg_expandable_error:nn { kernel } { fp-early-end }
     \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w #1
   }
 \cs_new:cpn { @@_exp_after_?_f:nw } #1#2
   {
-    \__msg_kernel_expandable_error:nnn { kernel } { bad-variable } {#2}
+    \__kernel_msg_expandable_error:nnn { kernel } { bad-variable } {#2}
     \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w #1
   }
 %<*package>
@@ -815,9 +815,9 @@
             \str_if_eq:nnTF {##2} { \protect }
               {
                 \cs_if_eq:NNTF ##2 #1 { \use_i:nn } { \use:n }
-                { \__msg_kernel_expandable_error:nnn { kernel } { fp-robust-cmd } }
+                { \__kernel_msg_expandable_error:nnn { kernel } { fp-robust-cmd } }
               }
-              { \__msg_kernel_expandable_error:nnn { kernel } { bad-variable } {##2} }
+              { \__kernel_msg_expandable_error:nnn { kernel } { bad-variable } {##2} }
           }
       }
   }
@@ -996,7 +996,7 @@
       {
         \cs_if_exist_use:cF { @@_parse_caseless_ \str_fold_case:n {#2} :N }
           {
-            \__msg_kernel_expandable_error:nnn
+            \__kernel_msg_expandable_error:nnn
               { kernel } { unknown-fp-word } {#2}
             \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
             \@@_parse_infix:NN
@@ -1051,13 +1051,13 @@
   {
     \cs_if_exist:cTF { @@_parse_infix_ \token_to_str:N #1 :N }
       {
-        \__msg_kernel_expandable_error:nnn
+        \__kernel_msg_expandable_error:nnn
           { kernel } { fp-missing-number } {#1}
         \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
         \@@_parse_infix:NN #3 #1
       }
       {
-        \__msg_kernel_expandable_error:nnn
+        \__kernel_msg_expandable_error:nnn
           { kernel } { fp-unknown-symbol } {#1}
         \@@_parse_one:Nw #3
       }
@@ -1729,12 +1729,12 @@
             \__str_if_eq_x:nn { \s_@@ } { \exp_not:N #1 }
             = 0 \exp_stop_f:
           0
-          \__msg_kernel_expandable_error:nnn
+          \__kernel_msg_expandable_error:nnn
             { kernel } { fp-after-e } { floating~point~ }
           \prg_return_true:
         \else:
           0
-          \__msg_kernel_expandable_error:nnn
+          \__kernel_msg_expandable_error:nnn
             { kernel } { bad-variable } {#1}
           \prg_return_false:
         \fi:
@@ -1745,14 +1745,14 @@
           \__int_value:w #1
         \else:
           0
-          \__msg_kernel_expandable_error:nnn
+          \__kernel_msg_expandable_error:nnn
             { kernel } { fp-after-e } { dimension~#1 }
         \fi:
         \prg_return_false:
       \fi:
     \else:
       0
-      \__msg_kernel_expandable_error:nnn
+      \__kernel_msg_expandable_error:nnn
         { kernel } { fp-missing } { exponent }
       \prg_return_true:
     \fi:
@@ -1874,7 +1874,7 @@
         \exp_not:N \@@_parse_expand:w
       }
       {
-        \exp_not:N \__msg_kernel_expandable_error:nnn
+        \exp_not:N \__kernel_msg_expandable_error:nnn
           { kernel } { fp-missing } { ) }
         #2 @
         \exp_not:N \use_none:n #3
@@ -1893,7 +1893,7 @@
   {
     \if_int_compare:w #1 = \c_@@_prec_comma_int
     \else:
-      \__msg_kernel_expandable_error:nnn
+      \__kernel_msg_expandable_error:nnn
         { kernel } { fp-missing-number } { ) }
       \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
     \fi:
@@ -2144,7 +2144,7 @@
 \cs_new:Npx \@@_parse_infix_check:NNN #1#2#3
   {
     \exp_not:N \if_meaning:w \scan_stop: #1
-      \exp_not:N \__msg_kernel_expandable_error:nnn
+      \exp_not:N \__kernel_msg_expandable_error:nnn
         { kernel } { fp-missing } { * }
       \exp_not:N \exp_after:wN
       \exp_not:c { @@_parse_infix_*:N }
@@ -2192,7 +2192,7 @@
     \cs_new:Npn #1 ##1
       {
         \if_int_compare:w ##1 < \c_@@_prec_paren_int
-          \__msg_kernel_expandable_error:nnn { kernel } { fp-extra } { ) }
+          \__kernel_msg_expandable_error:nnn { kernel } { fp-extra } { ) }
           \exp_after:wN \@@_parse_infix:NN
           \exp_after:wN ##1
           \exp:w \exp_after:wN \@@_parse_expand:w
@@ -2237,7 +2237,7 @@
 \cs_new:Npn \@@_parse_infix_comma_error:w #1 \exp:w
   {
     \fi:
-    \__msg_kernel_expandable_error:nn { kernel } { fp-extra-comma }
+    \__kernel_msg_expandable_error:nn { kernel } { fp-extra-comma }
     \exp_after:wN @
     \exp_after:wN \@@_parse_apply_binary:NwNwN
     \exp_after:wN ,
@@ -2436,7 +2436,7 @@
 \exp_args:Nc \@@_tmp:w { @@_parse_infix_::N }
   \@@_ternary_auxii:NwwN \c_@@_prec_colon_int
   {
-    \__msg_kernel_expandable_error:nnnn
+    \__kernel_msg_expandable_error:nnnn
       { kernel } { fp-missing } { ? } { ~for~?: }
   }
 %    \end{macrocode}
@@ -2477,7 +2477,7 @@
   }
 \cs_new:Npn \@@_parse_excl_error:
   {
-    \__msg_kernel_expandable_error:nnnn
+    \__kernel_msg_expandable_error:nnnn
       { kernel } { fp-missing } { = } { ~after~!. }
   }
 \cs_new:Npn \@@_parse_compare:NNNNNNN #1
@@ -2628,7 +2628,7 @@
     \int_compare:nNnTF { \tl_count:n {#3} } = {#2}
       { #1 #3 }
       {
-        \__msg_kernel_expandable_error:nnnnn
+        \__kernel_msg_expandable_error:nnnnn
           { kernel } { fp-num-args } { #1() } {#2} {#2}
         \c_nan_fp
       }
@@ -2682,30 +2682,30 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__msg_kernel_new:nnn { kernel } { fp-deprecated }
+\__kernel_msg_new:nnn { kernel } { fp-deprecated }
   { '#1'~deprecated;~use~'#2' }
-\__msg_kernel_new:nnn { kernel } { unknown-fp-word }
+\__kernel_msg_new:nnn { kernel } { unknown-fp-word }
   { Unknown~fp~word~#1. }
-\__msg_kernel_new:nnn { kernel } { fp-missing }
+\__kernel_msg_new:nnn { kernel } { fp-missing }
   { Missing~#1~inserted #2. }
-\__msg_kernel_new:nnn { kernel } { fp-extra }
+\__kernel_msg_new:nnn { kernel } { fp-extra }
   { Extra~#1~ignored. }
-\__msg_kernel_new:nnn { kernel } { fp-early-end }
+\__kernel_msg_new:nnn { kernel } { fp-early-end }
   { Premature~end~in~fp~expression. }
-\__msg_kernel_new:nnn { kernel } { fp-after-e }
+\__kernel_msg_new:nnn { kernel } { fp-after-e }
   { Cannot~use~#1 after~'e'. }
-\__msg_kernel_new:nnn { kernel } { fp-missing-number }
+\__kernel_msg_new:nnn { kernel } { fp-missing-number }
   { Missing~number~before~'#1'. }
-\__msg_kernel_new:nnn { kernel } { fp-unknown-symbol }
+\__kernel_msg_new:nnn { kernel } { fp-unknown-symbol }
   { Unknown~symbol~#1~ignored. }
-\__msg_kernel_new:nnn { kernel } { fp-extra-comma }
+\__kernel_msg_new:nnn { kernel } { fp-extra-comma }
   { Unexpected~comma:~extra~arguments~ignored. }
-\__msg_kernel_new:nnn { kernel } { fp-num-args }
+\__kernel_msg_new:nnn { kernel } { fp-num-args }
   { #1~expects~between~#2~and~#3~arguments. }
 %<*package>
 \cs_if_exist:cT { @unexpandable@protect }
   {
-    \__msg_kernel_new:nnn { kernel } { fp-robust-cmd }
+    \__kernel_msg_new:nnn { kernel } { fp-robust-cmd }
       { Robust~command~#1 invalid~in~fp~expression! }
   }
 %</package>
