--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -184,7 +184,7 @@
         \int_compare:nTF { - \c_max_dim <= \int_abs:n {#3} <= \c_max_dim }
           { \@@_gset_fast:Nnn #1 {#2} {#3} }
           {
-            \__msg_kernel_error:nnxxxx { kernel } { overflow }
+            \__kernel_msg_error:nnxxxx { kernel } { overflow }
               { \token_to_str:N #1 } {#2} {#3}
               { \int_compare:nNnT {#3} < 0 { - } \__int_value:w \c_max_dim }
             \@@_gset_fast:Nnn #1 {#2}
@@ -192,7 +192,7 @@
           }
       }
       {
-        \__msg_kernel_error:nnxxx { kernel } { out-of-bounds }
+        \__kernel_msg_error:nnxxx { kernel } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \@@_count:N #1 }
       }
   }
@@ -213,7 +213,7 @@
     \int_compare:nTF { 1 <= #2 <= \@@_count:N #1 }
       { \@@_item_fast:Nn #1 {#2} }
       {
-        \__msg_kernel_expandable_error:nnnnn { kernel } { out-of-bounds }
+        \__kernel_msg_expandable_error:nnnnn { kernel } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \@@_count:N #1 }
         0
       }
