--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -599,7 +599,7 @@
   {
     \tl_if_in:NnTF \g_@@_marks_tl { #1 }
       {
-        \__msg_kernel_error:nnx { kernel } { scanmark-already-defined }
+        \__kernel_msg_error:nnx { kernel } { scanmark-already-defined }
           { \token_to_str:N #1 }
       }
       {
