--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -446,7 +446,7 @@
           { \@@_parse_loop_init:Nnn #1 {#2} {#3} }
       }
       {
-        \__msg_kernel_error:nnn { color } { unknown-color } {#3}
+        \__kernel_msg_error:nnn { color } { unknown-color } {#3}
         \tl_set_eq:NN \l__color_current_tl \l_@@_named_black_tl
       }
   }
@@ -543,7 +543,7 @@
           }
       }
       {
-        \__msg_kernel_error:nnn { color } { unknown-color } {#2}
+        \__kernel_msg_error:nnn { color } { unknown-color } {#2}
         \@@_extract:nNN { black } \l_@@_model_tl \l_@@_value_tl
         \@@_parse_break:w
       }
@@ -691,7 +691,7 @@
           { #1 ~ \use:c {  @@_parse_ #1 :w } #2 , 0 , 0 , 0 , 0 \q_stop }
       }
       {
-        \__msg_kernel_error:nnn { color } { invalid-model } {#1}
+        \__kernel_msg_error:nnn { color } { invalid-model } {#1}
       }
   }
 %    \end{macrocode}
@@ -746,7 +746,7 @@
           { \tl_set_eq:cc { l_@@_named_ #1 _tl } { l_@@_named_ #2 _tl } }
       }
       {
-        \__msg_kernel_error:nnn { color } { unknown-color } {#2}
+        \__kernel_msg_error:nnn { color } { unknown-color } {#2}
       }
   }
 %    \end{macrocode}
@@ -814,13 +814,13 @@
 % \subsection{Messages}
 %
 % \begin{macrocode}
-\__msg_kernel_new:nnnn { color } { invalid-model }
+\__kernel_msg_new:nnnn { color } { invalid-model }
   { Invalid~color~model~'#1'. }
   {
     LaTeX~has~been~asked~to~use~a~color~model~called~'#1',~
     but~this~model~is~not~set~up.
   }
-\__msg_kernel_new:nnnn { color } { unknown-color }
+\__kernel_msg_new:nnnn { color } { unknown-color }
   { Unknown~color~'#1'. }
   {
     LaTeX~has~been~asked~to~use~a~color~named~'#1',~
@@ -829,7 +829,7 @@
 % \end{macrocode}
 %
 % \begin{macrocode}
-\__msg_kernel_new:nnn { color } { show }
+\__kernel_msg_new:nnn { color } { show }
   {
     The~color~#1~
     \tl_if_empty:nTF {#2}
