--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -261,7 +261,7 @@
 \cs_new_protected:Npn \image_bb_save:n #1
   {
     \dim_if_exist:cTF { c_@@_ #1 _urx_dim }
-      { \__msg_kernel_error:nnn { image } { bb-already-cached } {#1} }
+      { \__kernel_msg_error:nnn { image } { bb-already-cached } {#1} }
       {
         \dim_compare:nNnF \l_image_llx_dim = { 0pt }
           { \dim_const:cn { c_@@_ #1 _llx_dim } { \l_image_llx_dim } }
@@ -363,7 +363,7 @@
   {
     #3
     \exp_not:N \ior_if_eof:NTF \exp_not:N \l_@@_tmp_ior
-      { \__msg_kernel_error:nnn { kernel } {#2} {#3} }
+      { \__kernel_msg_error:nnn { kernel } {#2} {#3} }
       {
         \ior_str_map_inline:Nn \exp_not:N \l_@@_tmp_ior
           {
@@ -438,13 +438,13 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__msg_kernel_new:nnnn { image } { image-not-found }
+\__kernel_msg_new:nnnn { image } { image-not-found }
   { Image~file~'#1'~not~found. }
   {
     LaTeX~tried~to~open~image~file~'#1',
     ~but~the~file~could~not~be~read.
   }
-\__msg_kernel_new:nnnn { image } { pipe-failed }
+\__kernel_msg_new:nnnn { image } { pipe-failed }
   { Cannot~run~piped~system~commands. }
   {
     LaTeX~tried~to~call~a~system~process~but~this~was~not~possible.\\
