--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -71,14 +71,14 @@
 %
 % \begin{function}[EXP]
 %   {
-%     \__msg_kernel_expandable_warning:nnnnnn,
-%     \__msg_kernel_expandable_warning:nnnnn,
-%     \__msg_kernel_expandable_warning:nnnn,
-%     \__msg_kernel_expandable_warning:nnn,
-%     \__msg_kernel_expandable_warning:nn
+%     \__kernel_msg_expandable_warning:nnnnnn,
+%     \__kernel_msg_expandable_warning:nnnnn,
+%     \__kernel_msg_expandable_warning:nnnn,
+%     \__kernel_msg_expandable_warning:nnn,
+%     \__kernel_msg_expandable_warning:nn
 %   }
 %   \begin{syntax}
-%     \cs{__msg_kernel_expandable_warning:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
+%     \cs{__kernel_msg_expandable_warning:nnnnnn} \Arg{module} \Arg{message} \Arg{arg one} \Arg{arg two} \Arg{arg three} \Arg{arg four}
 %   \end{syntax}
 %   Issues a warning, passing \meta{arg one} to \meta{arg four}
 %   to the text-creating functions. The resulting string must
@@ -482,7 +482,7 @@
 % \begin{verbatim}
 %   \int_compare:nNnF \etex_currentgrouplevel:D = 0
 %     {
-%       \__msg_kernel_error:nnnnnn
+%       \__kernel_msg_error:nnnnnn
 %         { kernel } { package-in-group } {#1} {#2} {#3} {#4}
 %       \tex_endinput:D
 %     }
@@ -688,18 +688,18 @@
 %
 % \begin{macro}
 %   {
-%     \__msg_kernel_expandable_warning:nnnnnn,
-%     \__msg_kernel_expandable_warning:nnnnn,
-%     \__msg_kernel_expandable_warning:nnnn,
-%     \__msg_kernel_expandable_warning:nnn,
-%     \__msg_kernel_expandable_warning:nn
+%     \__kernel_msg_expandable_warning:nnnnnn,
+%     \__kernel_msg_expandable_warning:nnnnn,
+%     \__kernel_msg_expandable_warning:nnnn,
+%     \__kernel_msg_expandable_warning:nnn,
+%     \__kernel_msg_expandable_warning:nn
 %   }
 %   The command built from the csname
 %   |\c__msg_text_prefix_tl LaTeX / #1 / #2|
 %   takes four arguments and builds the warning text, which is fed to
 %   \cs{__msg_expandable_warning:n}.
 %    \begin{macrocode}
-\cs_new:Npn \__msg_kernel_expandable_warning:nnnnnn #1#2#3#4#5#6
+\cs_new:Npn \__kernel_msg_expandable_warning:nnnnnn #1#2#3#4#5#6
   {
     \exp_args:Nf \__msg_expandable_warning:n
       {
@@ -708,24 +708,24 @@
           {#3} {#4} {#5} {#6}
       }
   }
-\cs_new:Npn \__msg_kernel_expandable_warning:nnnnn #1#2#3#4#5
+\cs_new:Npn \__kernel_msg_expandable_warning:nnnnn #1#2#3#4#5
   {
-    \__msg_kernel_expandable_warning:nnnnnn
+    \__kernel_msg_expandable_warning:nnnnnn
       {#1} {#2} {#3} {#4} {#5} { }
   }
-\cs_new:Npn \__msg_kernel_expandable_warning:nnnn #1#2#3#4
+\cs_new:Npn \__kernel_msg_expandable_warning:nnnn #1#2#3#4
   {
-    \__msg_kernel_expandable_warning:nnnnnn
+    \__kernel_msg_expandable_warning:nnnnnn
       {#1} {#2} {#3} {#4} { } { }
   }
-\cs_new:Npn \__msg_kernel_expandable_warning:nnn #1#2#3
+\cs_new:Npn \__kernel_msg_expandable_warning:nnn #1#2#3
   {
-    \__msg_kernel_expandable_warning:nnnnnn
+    \__kernel_msg_expandable_warning:nnnnnn
       {#1} {#2} {#3} { } { } { }
   }
-\cs_new:Npn \__msg_kernel_expandable_warning:nn #1#2
+\cs_new:Npn \__kernel_msg_expandable_warning:nn #1#2
   {
-    \__msg_kernel_expandable_warning:nnnnnn
+    \__kernel_msg_expandable_warning:nnnnnn
       {#1} {#2} { } { } { } { }
   }
 %    \end{macrocode}
@@ -799,9 +799,9 @@
   {
 %<*package>
     \bool_if:NTF \l__expl_deprecated_error_bool
-      \__msg_kernel_error:nnx
+      \__kernel_msg_error:nnx
 %</package>
-      \__msg_kernel_warning:nnx
+      \__kernel_msg_warning:nnx
         { kernel } { deprecated-function } { \token_to_str:N #1 }
   }
 %    \end{macrocode}
@@ -814,9 +814,9 @@
   {
 %<*package>
     \bool_if:NTF \l__expl_deprecated_error_bool
-      \__msg_kernel_expandable_error:nnn
+      \__kernel_msg_expandable_error:nnn
 %</package>
-      \__msg_kernel_expandable_warning:nnn
+      \__kernel_msg_expandable_warning:nnn
         { kernel } { expandable-deprecated-function } {#1}
   }
 %    \end{macrocode}
@@ -824,9 +824,9 @@
 %
 % Two messages (probably requires improvements).
 %    \begin{macrocode}
-\__msg_kernel_new:nnn { kernel } { deprecated-function }
+\__kernel_msg_new:nnn { kernel } { deprecated-function }
   { The~function~#1~is~deprecated. }
-\__msg_kernel_new:nnn { kernel } { expandable-deprecated-function }
+\__kernel_msg_new:nnn { kernel } { expandable-deprecated-function }
   { #1 deprecated. }
 %    \end{macrocode}
 %
@@ -1144,7 +1144,7 @@
       \prg_return_false:
     \fi:
   }
-\__msg_kernel_new:nnn { kernel } { show-char }
+\__kernel_msg_new:nnn { kernel } { show-char }
   {
     The ~ character ~ '#1' ~ has ~ character ~ code ~
     \int_eval:n { `#1 } , ~ and ~ properties #2
@@ -1485,12 +1485,12 @@
     \quark_if_recursion_tail_stop:n {#2}
     \quark_if_recursion_tail_stop_do:nn {#3}
       {
-        \__msg_kernel_error:nnxx { replace } { odd-groups }
+        \__kernel_msg_error:nnxx { replace } { odd-groups }
           { \token_to_str:N \tl_..._replace:nn } { \tl_to_str:n {#2} }
       }
     \tl_if_empty:nTF {#2}
       {
-        \__msg_kernel_error:nnx
+        \__kernel_msg_error:nnx
           { kernel } { empty-search-pattern }
           { \tl_to_str:n {#3} }
       }
@@ -1565,7 +1565,7 @@
 % is not of the right form (it could be used for the \cs{int_case:nn}
 % functions, \emph{etc.}).
 %    \begin{macrocode}
-\__msg_kernel_new:nnnn { replace } { odd-groups }
+\__kernel_msg_new:nnnn { replace } { odd-groups }
   { Odd~number~of~brace~groups. }
   {
     The~second~argument~of~#1~must~have~the~form\\\\
