--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -585,14 +585,14 @@
 \cs_new_protected:Npn \@@_return_mark:N #1 { }
 \cs_new_protected:Npn \@@_return_none_error:
   {
-    \__msg_kernel_error:nnxx { kernel } { return-none }
+    \__kernel_msg_error:nnxx { kernel } { return-none }
       { \tex_the:D \tex_toks:D \l_@@_A_int }
       { \tex_the:D \tex_toks:D \l_@@_C_int }
     \@@_return_same:
   }
 \cs_new_protected:Npn \@@_return_two_error:w
     #1 \@@_return_none_error:
-  { \__msg_kernel_error:nn { kernel } { return-two } }
+  { \__kernel_msg_error:nn { kernel } { return-two } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1013,12 +1013,12 @@
   { \cs_set_eq:NN \toksdef \@@_disabled_toksdef:n }
 \cs_new_protected:Npn \@@_disabled_toksdef:n #1
   {
-    \__msg_kernel_error:nnx { kernel } { toksdef }
+    \__kernel_msg_error:nnx { kernel } { toksdef }
       { \token_to_str:N #1 }
     \@@_error:
     \tex_toksdef:D #1
   }
-\__msg_kernel_new:nnnn { kernel } { toksdef }
+\__kernel_msg_new:nnnn { kernel } { toksdef }
   { Allocation~of~\iow_char:N\\toks~registers~impossible~while~sorting. }
   {
     The~comparison~code~used~for~sorting~a~list~has~attempted~to~
@@ -1037,13 +1037,13 @@
 \cs_new_protected:Npn \@@_too_long_error:NNw #1#2 \fi:
   {
     \fi:
-    \__msg_kernel_error:nnxxx { kernel } { too-large }
+    \__kernel_msg_error:nnxxx { kernel } { too-large }
       { \token_to_str:N #2 }
       { \int_eval:n { \l_@@_true_max_int - \l_@@_min_int } }
       { \int_eval:n { \l_@@_top_int - \l_@@_min_int } }
     #1 \@@_error:
   }
-\__msg_kernel_new:nnnn { kernel } { too-large }
+\__kernel_msg_new:nnnn { kernel } { too-large }
   { The~list~#1~is~too~long~to~be~sorted~by~TeX. }
   {
     TeX~has~#2~toks~registers~still~available:~
@@ -1054,7 +1054,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-\__msg_kernel_new:nnnn { kernel } { return-none }
+\__kernel_msg_new:nnnn { kernel } { return-none }
   { The~comparison~code~did~not~return. }
   {
     When~sorting~a~list,~the~code~to~compare~items~#1~and~#2~
@@ -1063,7 +1063,7 @@
     \iow_char:N\\sort_return_swapped: .~
     Exactly~one~of~these~should~be~called.
   }
-\__msg_kernel_new:nnnn { kernel } { return-two }
+\__kernel_msg_new:nnnn { kernel } { return-two }
   { The~comparison~code~returned~multiple~times. }
   {
     When~sorting~a~list,~the~code~to~compare~items~called~
