--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1012,7 +1012,7 @@
   {
     \tl_if_empty:nTF {#4}
       {
-        \__msg_kernel_error:nnx { kernel } { empty-search-pattern } {#5}
+        \__kernel_msg_error:nnx { kernel } { empty-search-pattern } {#5}
       }
       {
         \use:x
