--- a/l3trial/l3ldb/l3ldbparse.dtx
+++ b/l3trial/l3ldb/l3ldbparse.dtx
@@ -275,8 +275,8 @@
 %   including the \cs{q_error} token.
 %    \begin{macrocode}
 \cs_new_protected:Npn \ldb_error:w #1 \q_error
-  { \__msg_kernel_error:nn { ldb } { illegal-context } }
-\__msg_kernel_new:nnnn { ldb } { illegal-context }
+  { \__kernel_msg_error:nn { ldb } { illegal-context } }
+\__kernel_msg_new:nnnn { ldb } { illegal-context }
   { Illegal~LDB~context:~\g_ldb_spec_tl.}
   {
     This~context~specification~is~illegal~and~
