--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -147,13 +147,13 @@
     \int_if_exist:cTF { g_trace_ \tl_to_str:n {#1} _level_int }
       { \prg_return_true: }
       {
-        \__msg_kernel_error:nnx { trace } { module-not-declared }
+        \__kernel_msg_error:nnx { trace } { module-not-declared }
           { \tl_to_str:n {#1} }
         \prg_return_false:
       }
   }
 \cs_generate_variant:Nn \trace_chk_module_declared:nT { V }
-\__msg_kernel_new:nnnn { trace } { module-not-declared }
+\__kernel_msg_new:nnnn { trace } { module-not-declared }
   { The~module~#1~does~not~provide~tracing~information. }
   {
     Either~there~is~no~module~called~#1,~or~it~was~not~declared~
@@ -210,7 +210,7 @@
             \tl_set:Nx \l_trace_internal_b_tl { \tl_to_str:n {#1} }
             \tl_if_eq:NNF \l_trace_internal_a_tl \l_trace_internal_b_tl
               {
-                \__msg_kernel_error:nn { trace } { mismatched-pop }
+                \__kernel_msg_error:nn { trace } { mismatched-pop }
                   { \tl_to_str:N \l_trace_internal_a_tl }
                   { \tl_to_str:N \l_trace_internal_b_tl }
               }
@@ -220,7 +220,7 @@
   }
 \cs_new_protected:Npn \trace_pop:nnn #1#2#3
   { \trace_pop:nnx {#1} {#2} { \exp_not:n {#3} } }
- % \__msg_kernel_new:nnn { trace } { mismatched-pop } { }
+ % \__kernel_msg_new:nnn { trace } { mismatched-pop } { }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -407,7 +407,7 @@
       }
       { } { } { }
   }
-\__msg_kernel_new:nnn { trace } { show-marks }
+\__kernel_msg_new:nnn { trace } { show-marks }
   { The~marks~on~this~page~are #1 }
 %    \end{macrocode}
 % \end{macro}
