--- a/l3trial/xfont/l3font.dtx
+++ b/l3trial/xfont/l3font.dtx
@@ -448,17 +448,17 @@
       {
         \cs_new_protected:Npn \font_suppress_not_found_error:
           {
-            \__msg_kernel_warning:nnx {l3font} {cmd-pdftex-unavail}
+            \__kernel_msg_warning:nnx {l3font} {cmd-pdftex-unavail}
               { \font_suppress_not_found_error: }
           }
         \cs_new_protected:Npn \font_enable_not_found_error:
           {
-            \__msg_kernel_warning:nnx {l3font} {cmd-pdftex-unavail}
+            \__kernel_msg_warning:nnx {l3font} {cmd-pdftex-unavail}
               { \font_enable_not_found_error: }
           }
       }
   }
-\__msg_kernel_new:nnn {l3font} {cmd-pdftex-unavail}
+\__kernel_msg_new:nnn {l3font} {cmd-pdftex-unavail}
   { The~command~`#1'~is~not~available~for~the~pdfTeX~engine. }
 %    \end{macrocode}
 % \end{macro}
