--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3expan.dtx Copyright (C) 1990-2017 The LaTeX3 project
+%% File: l3expan.dtx Copyright (C) 1990-2018 The LaTeX3 project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1877,7 +1877,8 @@
     #3 \q_stop #4 #5 {#6} {#7}
     \exp_not:n
       {
-        \@@_generate_variant_loop_warning:nnxxxx { kernel } { invalid-variant }
+        \@@_generate_variant_loop_warning:nnxxxx
+          { kernel } { deprecated-variant }
           {#7} { \token_to_str:N #5 } {#1} {#2}
       }
   }
